--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 Flask==1.0
+Flask-Cache==0.13.1
+Flask-Caching==1.4.0
 folium==0.5.0
 geojson==2.3.0
 idna==2.6
